# OpenGL-Template

./: CMakeLists.txt  readme.md
lib/GLAD/include/glad/: glad.h
lib/GLAD/src/: glad.c
src/: main.cpp
src/util/: common.hpp
